TCP-1: Clear unused `suspend`, clear `coroutineScope`, refactor ViewModels (state -> flow), refactor DataProvider (runBlocking -> Cursor)

--- a/provider/src/main/AndroidManifest.xml
+++ b/provider/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <provider
-            android:name=".DataProvider"
+            android:name=".data.DataProvider"
             android:authorities="com.alexyatsenka.testcontentprovider"
             android:exported="true"
             android:enabled="true"
